# ChangeLog for dev-perl/DateManip
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-mail/grepmail/ChangeLog,v 1.3 2002/07/23 02:27:37 cselkirk Exp $

*grepmail-4.70-r1 (16 Jul 2002)
  
  22 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> grepmail-4.70-r1.ebuild :

  Added dev-perl/Digest-MD5 and dev-prel/Parse-RecDescent to DEPEND.
  Seemant: i think you may have had these installed prior to building.
  Added RDEPEND. Q: should these be ="" (as per skel.ebuild) or ${DEPEND}? 

  16 Jul 2002; Seemant Kulleen <seemant@gentoo.org> grepmail-4.70-r1.ebuild
  files/digest-grepmail-4.70-r1 :

  Completely NEW ebuild, which is actually a perl module, it turns out, so
  it might be better in dev-perl than in net-mail.  This ebuild extends the
  perl-module eclass, and the DEPEND list is sorted out, so it actually
  compiles now.

*grepmail-4.70 (22 April 2002)

  22 Apr 2002; Arcady Genkin <agenkin@thpoon.com>: grepmail-4.70.ebuild
  
  Initial version of the package.